--- a/Seq2Seq.ipynb
+++ b/Seq2Seq.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +73,7 @@
    "source": [
     "from model.th.story_model import RNNTargetEncoder\n",
     "\n",
-    "args = type('Args', (object,), {\"rnn_dim\":256, 'recdrop':False, 'stocdrop':0.0, 'dropout':0.0, 'rlayers':2,\n",
+    "args = type('Args', (object,), {\"rnn_dim\":256, 'recdrop':False, 'stocdrop':0.0, 'dropout':0.0, 'rlayers':1,\n",
     "                               'label_size':2, 'input_size': 300, 'src_steps': 65})()\n",
     "pdrop = T.scalar(dtype=floatX)\n",
     "src_sent = T.imatrix('src_sent')\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -395,6 +395,236 @@
     "labels = T.ivector('labels')\n",
     "\n",
     "embedding = theano.shared(embed, 'embedding', borrow=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "tgt_encoder = RNNEncoderAttention(encoder, tgt_sent.T, labels, tgt_mask.T, embedding, pdrop, args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Gut of the AttentionEncoder\n",
+    "\n",
+    "# target_sqn: (time_step, N)\n",
+    "hs = encoder.hs\n",
+    "\n",
+    "# NOTE just use this so only last layer uses attention\n",
+    "def layer_init(attention):\n",
+    "    if not attention:\n",
+    "        return GRULayer\n",
+    "    else:\n",
+    "        return lambda *largs, **kwargs: GRULayerAttention(hs, *largs, **kwargs)\n",
+    "\n",
+    "# initial states\n",
+    "outputs_info = encoder.out\n",
+    "rlayers = list()\n",
+    "\n",
+    "inp = embedding[tgt_sent]\n",
+    "attention = args.rlayers == 1\n",
+    "# exclude last prediction\n",
+    "seqmask = get_sequence_dropout_mask((tgt_sent.shape[0], tgt_sent.shape[1], embedding.shape[1]), pdrop)\n",
+    "inplayer = layer_init(attention)(inp.astype(floatX), tgt_mask, seqmask, args.input_size,\n",
+    "                                 outputs_info[0], args, suffix='tgtenc0')\n",
+    "rlayers.append(inplayer)\n",
+    "for k in xrange(1, args.rlayers):\n",
+    "    attention = (args.rlayers == k + 1)\n",
+    "    seqmask = get_sequence_dropout_mask((tgt_sent.shape[0], tgt_sent.shape[1], args.rnn_dim), pdrop)\n",
+    "    rlayer = layer_init(attention)(Dropout(rlayers[-1].out, pdrop).out, tgt_mask,\n",
+    "                                   seqmask, args.rnn_dim, outputs_info[k], args, suffix='dec%d' % k)\n",
+    "    rlayers.append(rlayer)\n",
+    "\n",
+    "olayer = LogisticRegression(Dropout(rlayers[-1].out, pdrop).out[-1, :, :], args.rnn_dim,\n",
+    "                                    args.label_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "test_encoder_hs = theano.function([src_sent, pdrop], [encoder.hs])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a = test_encoder_hs(x, 0.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(65, 50, 256)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_olayer = theano.function([src_sent, tgt_sent, pdrop], [olayer.out])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50, 2)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = test_olayer(x, y.T, 0.0)  # this is a bit weird :( \n",
+    "# because we forgot to transpose y in the above code..but we remembered to tranpose x..\n",
+    "a[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cost = cross_entropy(olayer.out, labels, normalize=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "test_cost = theano.function([src_sent, tgt_sent, pdrop, labels], [cost])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array(0.693530261516571, dtype=float32)]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_cost(x, y.T, 0.0, real_label)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vector Preprocessing\n",
+    "\n",
+    "We preprocess two story endings by various means. We'll examine if our target encoder class works or not here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50, 65, 300)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x, (y, y_2), real_label = loader.get_batch('train', 2)\n",
+    "embed[x].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50, 20, 600)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.concatenate((embed[y], embed[y_2]), axis=2).shape"
    ]
   },
   {
