--- a/Seq2Seq.ipynb
+++ b/Seq2Seq.ipynb
@@ -9,11 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import theano\n",
@@ -65,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -625,6 +634,233 @@
    ],
    "source": [
     "np.concatenate((embed[y], embed[y_2]), axis=2).shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Bidirectional Model\n",
+    "\n",
+    "Bidirectional model currently doesn't work with TargetEncoder, let's take a look"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from model.th.encdec_shared import BiRNNEncoder\n",
+    "\n",
+    "args = type('Args', (object,), {\"rnn_dim\":256, 'recdrop':False, 'stocdrop':0.0, 'dropout':0.0, 'rlayers':2,\n",
+    "                               'label_size':2, 'input_size': 300, 'src_steps': 65, 'vector_mode': 'sub', \n",
+    "                                'bidir': True, 'batch_size': 50})()\n",
+    "pdrop = T.scalar(dtype=floatX)\n",
+    "src_sent = T.imatrix('src_sent')\n",
+    "rev_src_sent = T.imatrix('rev_src_sent')\n",
+    "src_mask = T.bmatrix('src_mask')\n",
+    "tgt_sent = T.imatrix('tgt_sent')\n",
+    "tgt2_sent = T.imatrix('tgt2_sent')\n",
+    "space_mask = T.bmatrix('space_mask')\n",
+    "\n",
+    "tgt_mask = T.ones_like(tgt_sent).astype(floatX)  # this is used to drop words? Now we don't\n",
+    "\n",
+    "labels = T.ivector('labels')\n",
+    "\n",
+    "embedding = theano.shared(embed, 'embedding', borrow=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "encoder = BiRNNEncoder(src_sent.T, rev_src_sent.T, src_mask.T, space_mask.T, embedding, pdrop,\n",
+    "                                        args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "get_out = theano.function([src_sent, src_mask, rev_src_sent, pdrop], encoder.out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from model.th.story_model import get_mask, RNNTargetEncoder\n",
+    "from model.th.encdec_shared import reverse_sent\n",
+    "x, (y, y_2), real_label = loader.get_batch('train', 2)\n",
+    "x_mask = get_mask(x)\n",
+    "x_rev = reverse_sent(x, x_mask)\n",
+    "real_out = get_out(x, x_mask, x_rev, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(real_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(65, 50, 256)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "real_out[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "super(type, obj): obj must be an instance or subtype of type",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-49-e05230ad05d7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m tgt_encoder = RNNTargetEncoder(encoder.out, tgt_sent.T, tgt2_sent.T, labels, tgt_mask.T, embedding, pdrop,\n\u001b[0;32m----> 2\u001b[0;31m                                                 args)\n\u001b[0m",
+      "\u001b[0;32m/Users/Aimingnie/Documents/School/Stanford/CS 224N/DeepLearning/allen/trident/model/th/story_model.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, init_states, target_sqn, target2_sqn, label, mask, L_dec, pdrop, args, suffix_prefix)\u001b[0m\n\u001b[1;32m    115\u001b[0m                                     args.label_size)\n\u001b[1;32m    116\u001b[0m         \u001b[0mcost\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcross_entropy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0molayer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnormalize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 117\u001b[0;31m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRNNTargetEncoder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrlayers\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0molayer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcost\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    118\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: super(type, obj): obj must be an instance or subtype of type"
+     ]
+    }
+   ],
+   "source": [
+    "tgt_encoder = RNNTargetEncoder(encoder.out, tgt_sent.T, tgt2_sent.T, labels, tgt_mask.T, embedding, pdrop,\n",
+    "                                                args)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "outputs_info = encoder.out\n",
+    "rlayers = list()\n",
+    "\n",
+    "inp = embedding[tgt_sent.T]\n",
+    "\n",
+    "# exclude last prediction\n",
+    "seqmask = get_sequence_dropout_mask((tgt_sent.T.shape[0], tgt_sent.T.shape[1], embedding.shape[1]), pdrop)\n",
+    "inplayer = GRULayer(inp.astype(floatX), tgt_mask.T, seqmask, embed.shape[1], outputs_info[0],\n",
+    "                    args, backwards=False)\n",
+    "\n",
+    "rlayers.append(inplayer)\n",
+    "for k in xrange(1, args.rlayers):\n",
+    "    inp = rlayers[-1].out\n",
+    "    seqmask = get_sequence_dropout_mask((tgt_sent.T.shape[0], tgt_sent.T.shape[1], args.rnn_dim), pdrop)\n",
+    "    rlayer = GRULayer(Dropout(inp, pdrop).out, tgt_mask.T, seqmask, args.rnn_dim,\n",
+    "                      outputs_info[k], args, backwards=False)\n",
+    "    rlayers.append(rlayer)\n",
+    "\n",
+    "last_layer = Dropout(rlayers[-1].out, pdrop)\n",
+    "# olayer = LogisticRegression(Dropout(rlayers[-1].out, pdrop).out[-1, :, :], args.rnn_dim,\n",
+    "#                                     args.label_size)\n",
+    "# cost = cross_entropy(olayer.out, labels, normalize=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x, (y, y_2), real_label = loader.get_batch('train', 2)\n",
+    "x_mask = get_mask(x)\n",
+    "x_rev = reverse_sent(x, x_mask)\n",
+    "\n",
+    "last_layer_out = theano.function([src_sent, src_mask, rev_src_sent, tgt_sent, pdrop], last_layer.out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "real_ll_out = last_layer_out(x, x_mask, x_rev, y, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20, 65, 50, 256)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "real_ll_out.shape"
    ]
   },
   {
